# Zeiterfassung

./: CMakeLists.txt  main.cpp
arduinoCode/src/: main.cpp
espCode/: platformio.ini
espCode/src/: main.cpp
serverCode/: CMakeLists.txt  main.cpp
